# CysuClean

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package.json
configs/: package-lock.json  package.json  tailwind.config.js  tauri.conf.json
src/: App.tsx  cleaner.rs  config.rs  index.css  main.rs
src-tauri/: Cargo.toml
src-tauri/src/: cleaner.rs  config.rs  error.rs  main.rs
src-tauri/wix/: main.wxs
